fix: resolve crash on invalid tokens by checking validity before extraction in AuthController